48
================

16/10/23 Add a document button/type to medical tab/book #1336
15/10/23 PetRescue: Show error responses in publishing history slider
13/10/23 Handle decimal commas in PayPal activity CSV files
13/10/23 Bug fix for multiple mergeperson values in an incoming form
12/10/23 Force daily obs animal links to open in a new tab #489
12/10/23 Make SAC configuration available to Canadian shelters
11/10/23 Fix handling of autocomplete in email addresses #1337
09/10/23 Include couple email from activemovement in animal email dropdown
04/10/23 Online forms: Number field type (validation only) #969
04/10/23 Option to default to all on find incident #1334
04/10/23 PetRescue: Option to only send coordinator's email address
04/10/23 Bug fix for documents where flags is null #1329
02/10/23 Manual code check for new animals, make case insensitive
02/10/23 Fix bug with display of short codes on Home/Shelterview
02/10/23 lksize should still be non-editable for English speakers
02/10/23 Option to make not for adoption with more than X active reserves #1335
02/10/23 Option to remove home and work telephone numbers #1328
29/09/23 Reinstate mobile->home number check when adding new people
28/09/23 Fix fromJSON to not assign blanks in multi-select #1333
27/09/23 New flag wordkeys: AnimalFlagsEmblems/Only/X #1329
27/09/23 Browse smcom: show installed reports in list, remove select all #1332
26/09/23 Restrict new stock records to creating a max of 100 level records
25/09/23 Unified upload document template button for HTML or ODT #1315
25/09/23 Allow licence renew flag to be manually updated if no animal set #728
24/09/23 system log message refactoring to fix re bug
22/09/23 Automated emails for adopter followup, licence/clinic reminders #1322
21/09/23 Revert button for online form/report header/footer editing #1330
21/09/23 Fix for boarding shelter animals not appearing in location/unit mode
21/09/23 Add BondedMicrochips wordkey 